<resources>
    <string name="app_name">纸间糖果</string>
    <string name="my_collection">我的收藏</string>
    <string name="freqently_question">常见问题</string>
    <string name="contact_worker">联系客服</string>
    <string name="newbirds_book">新手攻略</string>
    <string name="xingyionghuzhuce">新用户注册立即领取优惠券</string>
    <string name="login_or_register">登录/注册</string>
    <string name="official_report">官方公告</string>
    <string name="about_zjtg">关于纸间糖果</string>
    <string name="nickname">昵称</string>
    <string name="fix_phone">修改手机号</string>
    <string name="fix_passwd">修改密码</string>
    <string name="message_notice">消息通知</string>
    <string name="login">登录</string>
    <string name="circle">圈子</string>
    <string name="withdraw">提现</string>
    <string name="orders">订单</string>
    <string name="fans">粉丝</string>
    <string name="copy">复制</string>
    <string name="realname">真实姓名</string>
    <string name="binding_alipay">绑定支付宝</string>
    <string name="idenfied_code">验证码</string>
    <string name="gain_idenfied_code">获取验证码</string>
    <string name="meiyue25hao">*每月25号后可提现上个月内确认收货的订单佣金</string>
    <string name="withdraw_money">提现金额</string>
    <string name="submit_apply">提交申请</string>
    <string name="phone_number">手机号码</string>
    <string name="lj_binding">立即绑定</string>
    <string name="wechat_number">纸间糖果微信公众号 </string>
    <string name="save_code">保存二维码到手机</string>
    <string name="work_wechat">专属客服微信</string>
    <string name="message_back">意见反馈</string>
    <string name="my_feedback">我的反馈</string>
    <string name="service_time">   服务时间：周一至周六 9:00-18:00</string>
    <string name="up_picture"> 上传图片</string>
    <string name="vip_profit">会员收益</string>
    <string name="ljtx">立即提现</string>
    <string name="ljjs">累计结算收益：</string>
    <string name="jssr">结算收入</string>
    <string name="fkbs">付款笔数</string>
    <string name="yjyj">预计佣金</string>
    <string name="fxz">分析赚</string>
    <string name="invite_friends">邀请好友</string>
    <string name="shareposter">分享专属海报，新用户可免费邀请码注册，关系自动绑定</string>
    <string name="newcoustomscan">新用户扫二维码→下载APP→点击微信登录</string>
    <string name="copyregister_code">复制注册口令</string>
    <string name="shareposte">分析用户海报</string>
    <string name="rmessage">接受消息通知</string>
    <string name="profit_mention">收益提醒</string>
    <string name="newfansmention">新粉丝提醒</string>
    <string name="opened">已开启</string>
    <string name="pleaseinputcode">请输入邀请码</string>
    <string name="register">注册</string>
    <string name="fixed">确认修改</string>
    <string name="pleaseinput_i_code">请输入验证码</string>
    <string name="passwd">密码</string>
    <string name="please_input_passwd">请输入密码</string>
    <string name="ssss">*新的密码长度为6-32位</string>
    <string name="ifquit">你确定要退出吗</string>
    <string name="sure">确定</string>
    <string name="quit">取消</string>
    <string name="alipayed">到账支付宝</string>绑定支付宝


</resources>
