<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <LinearLayout
        android:id="@+id/ewewe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/only_line_down"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/revise_phone_return"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/sub_return" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fix_phone" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/only_line_down"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/realname"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="135164646292"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/only_line_down"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/idenfied_code"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/pleaseinput_i_code"
                android:inputType="textPersonName"
                android:textSize="12sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_style"
                android:text="@string/gain_idenfied_code"
                android:textColor="@color/red"
                android:textSize="11sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:background="@drawable/login_or_register_buttom"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/lj_binding"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ewewe" />

</android.support.constraint.ConstraintLayout>