<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/only_line_down"
            android:gravity="left|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/feedback_return"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/sub_return" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/message_back"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_feedback" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/background_light"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/feedback_input"
                    android:layout_width="match_parent"


                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"


                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:lineSpacingExtra="20dp"
                    android:lineSpacingMultiplier="2"
                    android:padding="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/feedback_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:lineSpacingMultiplier="0.5"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/up_picture" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    android:divider="@null"
                    android:fadingEdge="none"
                    android:listSelector="@android:color/transparent"
                    android:scrollbarStyle="outsideOverlay"
                    app:layoutManager="android.support.v7.widget.GridLayoutManager"
                    app:spanCount="4"
                    tools:listitem="@layout/list_item_image" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_or_register_buttom"
                android:text="@string/submit_apply"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>